--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_BASE_URL=http://localhost/angel-gulf/angle-gulf/
-# REACT_APP_API_BASE_URL=https://www.angelgulfjobs.com/
+# REACT_APP_API_BASE_URL=http://localhost/angel-gulf/angle-gulf/
+REACT_APP_API_BASE_URL=https://www.angelgulfjobs.com/
