--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
+    "sweetalert2": "^11.16.0",
     "swiper": "^11.2.2",
     "uuid": "^11.0.5",
     "yup": "^1.6.1"
